// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleListItem tests renders correctly 1`] = `
<div>
  <li
    class="container"
  >
    <article
      class="article"
    >
      <div
        class="wrapper"
      >
        <h2
          class="title"
        >
          The Statue of Liberty's torch heads to new museum
        </h2>
      </div>
      <button
        class="button"
      >
        Show more
      </button>
    </article>
  </li>
</div>
`;

exports[`ArticleListItem tests renders correctly after button is clicked 1`] = `
<div>
  <li
    class="container"
  >
    <article
      class="article"
    >
      <div
        class="wrapper"
      >
        <h2
          class="title"
        >
          The Statue of Liberty's torch heads to new museum
        </h2>
        <div
          class="text"
        >
          <p>
            The Statue of Liberty's original torch is getting a new home
          </p>
          <time
            class="time"
            datetime="2018-11-22T15:12:24.000Z"
          >
            November 22nd 2018, 7:12 am
          </time>
        </div>
      </div>
      <button
        class="button"
      >
        Show less
      </button>
    </article>
  </li>
</div>
`;

exports[`ArticleListItem tests renders correctly after button is clicked 2`] = `
<div>
  <li
    class="container"
  >
    <article
      class="article"
    >
      <div
        class="wrapper"
      >
        <h2
          class="title"
        >
          The Statue of Liberty's torch heads to new museum
        </h2>
      </div>
      <button
        class="button"
      >
        Show more
      </button>
    </article>
  </li>
</div>
`;